# quantum-experiment-structures

./: .gitignore  README.md  ccs.json  pyproject.toml
examples/causal_contextuality_scenarios/: complex_causal_contextual.json  test_ccs.json
examples/causal_contextuality_scenarios/arbitrary_keys/: arbitrary_keys_schema.jschema  bipartite_bell_scenario.json  complex_causal_contextual.json  even_simpler_causal_non_contextual.json  flat_non_contextual.json  ghz_scenario.json  simple_stable_causal_contextual.json  simple_unstable_causal_contextual.json
examples/causal_contextuality_scenarios/better_format/: bipartite_bell_scenario.json  causal_contextual_complex.json  simple_causal_non_contextual.json  simple_flat_contextual.json
examples/spacetime_games/: bell_perfect_information.json  causal_bridge_imperfect_information.json  create_spacetime_games.py  cyclic_rank_3_imperfect_information.json  cyclic_rank_4_imperfect_information.json  spacetime_game_schema.json  test_spacetime_game.json
quantum_experiment_structures/: __init__.py  __version__.py  causal_contextuality_scenario.py  generator.py  spacetime_game.py
quantum_experiment_structures/data/: __init__.py  local_covers.py  schemas.py
quantum_experiment_structures/utils/: __init__.py  ccs_generator_script.py  cluster_ccs_generator.py  utils.py
schemas/: GEFII_schema.jschema  PMF_schema.jschema  causal_contextuality_scenario_schema.jschema  ccs_generator_settings_schema.jschema  spacetime_game_schema.jschema  spark_ccs_schema.json
utils/: code_check.py
(+19 files in other folders)
